Add Polly support. It is always compiled and linked, but not used by default.
Use can be triggered via `-C polly=true` or at compiler build-time (see `config.toml.example`).

Force LLVM rebuild on buildbots.

--- a/config.toml.example
+++ b/config.toml.example
@@ -346,6 +346,9 @@
 # Whether to deny warnings in crates
 #deny-warnings = true
 
+# Use polyhedral optimizations by default.
+#use-polly-by-default = false
+
 # =============================================================================
 # Options for specific targets
 #
